--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,27 +1,70 @@
 <html>
-<head>
-  <title>Productos en tiempo real</title>
-</head>
-<body>
-  <h1>Productos en tiempo real</h1>
-  <form id="agregarProductoForm">
-    <input type="text" id="nuevoProducto" placeholder="Nuevo Producto">
-    <button type="submit">Agregar Producto</button>
-  </form>
-  <script src="/socket.io/socket.io.js"></script>
-  </script>
+  <link rel="stylesheet" href="/css/style.css">
+<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <html>
-<head>
-  <title>Lista de Productos</title>
-</head>
-<body>
-  <h1>Lista de Productos</h1>
-  <ul>
-    {{#each products}}
-    <li>{{title}} - Precio: {{price}}</li>
-    {{/each}}
-  </ul>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Socket.IO chat</title>
+  </head>
+  <body class="bg-light">
+  <div class="container">
+    <div class="row">
+    <ul id="messages"></ul>
+    
+    <div class="col-md-8 order-md-1">
+      <h1>Agregá un nuevo producto</h1>
+    <form id="form" action="">
+      <div class="mb-3">
+        <label for="productname">Nombre del producto</label>
+        <input id="title" class="form-control" autocomplete="off" />
+      </div>
+      <div class="mb-3">
+        <label for="productdescription">Descripcion del producto</label>
+        <textarea id="description" class="form-control" rows="2"></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="productprice">Precio</label>
+        <input id="price" class="form-control" autocomplete="off" />
+      </div>
+      <div class="mb-3">
+        <label for="productthumbnail">Thumbnail o ruta</label>
+        <input id="thumbnail" class="form-control" autocomplete="off" />
+      </div>
+      <div class="mb-3">
+        <label for="productcode">Código</label>
+        <input id="code" class="form-control" autocomplete="off" />
+      </div>
+      <div class="mb-3">
+        <label for="productstock">Stock</label>
+        <input id="stock" class="form-control" autocomplete="off" />
+      </div>
+      <button>Send</button>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    </div>
+    <div class="col-md-4 order-md-2 mb-4">
+      <h1>Lista de Productos</h1>
+    </div>
+    </div>
+  </div>
+    
+  </body>
+  <script src="/socket.io/socket.io.js">
+
+  </script>
+  <script src="./js/socket.js">
+    
+  </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <body>
+    <h1>Lista de Productos del File System</h1>
+      <ul>
+        {{#each products}}
+        <li>{{title}} - Precio: {{price}}</li>
+        {{/each}}
+      </ul>
+  </body>
 </html>
-</body>
