--- a/src/views/sockets.handlebars
+++ b/src/views/sockets.handlebars
@@ -21,7 +21,9 @@
   <body>
     <ul id="messages"></ul>
     <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+      <input id="title" autocomplete="off" />
+      <textarea id="description" rows="2"></textarea>
+      <button>Send</button>
     </form>
   </body>
 <script src="/socket.io/socket.io.js">
